[fix bug 741541] Wrap bio text in profile.

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -64,7 +64,10 @@ body {
     font-weight:normal;
     text-shadow:0 1px 0 rgba(255,255,255,0.75);
 }
-
+#bio {
+    width:100%; 
+    word-wrap:break-word;
+}
 .huge {
     font-size:108px;
     letter-spacing:-4px;
